fix: css media query; no gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,11 +231,13 @@ h2 {
     padding-top: 2.5rem;
   }
 
-  main {
-    width: 85%;
-    margin: auto;
+  .main-landing,
+  .web-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0% 10%;
   }
-
   .card {
     margin: 1.5rem;
     padding: 2rem;
